--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4",
 		"vitest": "^3.2.4"
+	},
+	"dependencies": 
+	{
+		"peer-filter-c00278711": "github:OlawoleAbayomi-Owodunni/RMW_P0_C00278711#v0.1.1"
 	}
 }
